Chapter 02 Networking/multi-container-sharing-same-process.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-sharing-same-process
spec:
  shareProcessNamespace: true
  containers:
    - name: container1
      image: nginx
    - name: container2
      image: busybox
      args:
        - /bin/sh
        - -c
        - echo hello; sleep 3600
