Chapter 02 Networking/single-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-backend-ingress
spec:
  defaultBackend:
    service:
      name: service-1
      port:
        number: 80
